@@ -505,9 +505,10 @@ class AreenaPlaylist(object):
 
         return ('https://areena.yle.fi/api/programs/v1/items.json?'
                 'series={series_id}&type=program&availability=ondemand&'
-                'order=episode.hash%3Adesc%2C'
-                'publication.starttime%3Adesc%2Ctitle.fi%3Aasc&'
-                'app_id=89868a18&app_key=54bb4ea4d92854a2a45e98f961f0d7da&'
+                'order=episode.hash%3Aasc%2C'
+                'publication.starttime%3Aasc%2Ctitle.fi%3Aasc&'
+                'app_id=areena_web_frontend_prod&'
+                'app_key=4622a8f8505bb056c956832a70c105d4&'
                 'limit={limit}{offset_param}'.format(
                     series_id=quote_plus(series_id),
                     limit=str(page_size),
