@@ -10,6 +10,7 @@ Distributed under the GPL v3
 - Subtitle languages are correctly labeled (only in the Matroska format)
 - Some streams were not downloaded at all
 - Tabs and other odd whitespaces are replaces by space in generated filenames
+- Fixed the series download which was broken by changes in Areena
 
 Version 20190203
 
